--- a/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
+++ b/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
@@ -6,7 +6,7 @@
 <meta name="This is a personal blog made as a hobby project all made by one gal" content="Blog">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <div>
 <h1>Start of a Cool Blog</h1>
@@ -26,7 +26,7 @@
 </article>
 
 <div>
-<a href="index.html">Home Page</a>
+<a href="Index.html">Home Page</a>
 </div>
 
 <footer>
