--- a/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
+++ b/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
@@ -26,7 +26,7 @@
 </article>
 
 <div>
-<a href="/Hegweard-Tsulalgis-Blog/">Home Page</a>
+<a href="/Hegweard-Tsulalgis-Blog/index.html">Home Page</a>
 </div>
 
 <footer>
