--- a/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
+++ b/pages/Blog-Pages/Start-Of-Blog/Start-Of-Blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Start of a Cool Blog</title>
-<link rel="icon" type="image/jpg" href="/Images/profile.jpg">
+<link rel="icon" type="image/jpg" href="/Hegweard-Tsulalgis-Blog/Images/profile.jpg">
 <meta name="This is a personal blog made as a hobby project all made by one gal" content="Blog">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
