Add RSS feed support

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         </section>
 
         <br>
+        
+        <section>
+            <a href="https://hegweardtsulalgi.github.io/Hegweard-Tsulalgis-Blog/feed.xml">RSS</a>
+        </section>
 
+        <br>
+        
         <section>
             <a href="{{ site.baseurl }}{% link _pages/socials.md %}">Socials</a>
         </section>
