Adds About page to Index

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         </section>
 
         <br>
+
+        <section>
+            <a href="{{ site.baseurl }}{% link _pages/about.md %}">About</a>
+        </section>
+
+        <br>
         
         <section>
             <a href="https://hegweardtsulalgi.github.io/Hegweard-Tsulalgis-Blog/feed.xml">RSS</a>
