--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br>
 
         <section>
-            <a href="{{ site.baseurl }}_pages/about.md">About</a>
+            <a href="{{ site.baseurl }}{% link _pages/about.md %}">About</a>
         </section>
 
         <br>
