--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <h1>Hegweard Tsulalgi's Blog!</h1>
-        <p>This blog is inspired by blogs like <a target="_blank" href="https://drewdevault.com/">Drew DeVault's</a>
-            blog</p>
+        <p>This blog was inspired by blogs like <a target="_blank" href="https://drewdevault.com/">Drew DeVault's</a>
+            blog.</p>
     </header>
 
     <main>
