Adding my Pronouns to homepage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
         </section>
 
+        <section>
+            <p>He/Him/She/Her</p>
+        </section>
+
         <section class="Pride flag">
             <img alt="Pride Flag" src="{{ site.baseurl }}/assets/images/pride.svg" height="60">
         </section>
